project/manifests/app-definitions/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app-volume
          persistentVolumeClaim:
            claimName: todo-app-pvc
      containers:
      - name: todo-app
        image: todo-app:1.1
        ports:
        - containerPort: 8081
        imagePullPolicy: Never
        volumeMounts:
          - name: todo-app-volume
            mountPath: /usr/src/app/files
