project/manifests/app-definitions/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project-namespace
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 8081
